--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        <p class="padding">header</p>
+    </div>
+
+    <div class="nav">
+        <p class="padding">nav</p>
+    </div>
+
+    <div class="main">
+        <div class="section">
+            <p>section</p>
+            <div class="article">
+                <p class="article">article</p>
+                <p class="articlehead">h1, h2, h3</p>
+                <p class="articlehead">p</p>
+            </div>
+        </div>
+
+        <div class="aside">
+            <p>aside</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p class="padding">footer</p>
+    </div>
+
 </body>
 </html>
